--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -29,7 +29,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 black mypy pylint pytest
-          pip install types-psycopg2 types-python-dotenv types-pika types-FastAPI types-uvicorn
+          pip install types-psycopg2 types-pika types-FastAPI types-uvicorn
+          pip install python-dotenv fastapi pika psycopg2-binary uvicorn
 
       - name: Run flake8
         run: flake8 .
