--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -29,14 +29,16 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 black mypy pylint pytest
-          pip install types-psycopg2 types-pika types-FastAPI types-uvicorn
+          pip install types-psycopg2 types-pika types-ujson types-requests types-PyYAML
           pip install python-dotenv fastapi pika psycopg2-binary uvicorn
 
       - name: Run flake8
         run: flake8 .
 
       - name: Run mypy
-        run: mypy .
+        run: |
+          mypy --install-types --non-interactive .
+          mypy --ignore-missing-imports .
 
       - name: Run pytest
         run: pytest test_lint.py -v
