--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,4 @@
 [mypy]
+python_version = 3.11
 ignore_missing_imports = True
 disallow_untyped_defs = True
-check_untyped_defs = True
-no_implicit_optional = True
