--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -22,6 +22,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
+      - name: Message
+        run: |
+          echo "Этот workflow запущен: $(date)"
+          echo "Ветка: ${{ github.ref }}"
+          echo "Автор: ${{ github.actor }}"
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -38,21 +44,28 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
-    
-    - name: Install dependencies
+    - name: Message
       run: |
-        python -m pip install --upgrade pip
-        pip install requests
+        echo "Пропуск теста..."
+        echo "Этот workflow запущен: $(date)"
+        echo "Ветка: ${{ github.ref }}"
+        echo "Автор: ${{ github.actor }}"
+
+    # - name: Set up Python
+    #   uses: actions/setup-python@v4
+    #   with:
+    #     python-version: '3.9'
     
-    - name: Start server in background
-      run: |
-        python api_server.py &
-        echo $! > server.pid
-        sleep 2  # Wait for server to start
+    # - name: Install dependencies
+    #   run: |
+    #     python -m pip install --upgrade pip
+    #     pip install requests
+    
+    # - name: Start server in background
+    #   run: |
+    #     python api_server.py &
+    #     echo $! > server.pid
+    #     sleep 2  # Wait for server to start
     
     # - name: Run tests
     #   run: |
